# luxrad

./: .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh  sdkconfig
components/apds9960/: CMakeLists.txt  apds9960.c  idf_component.yml
components/apds9960/include/: apds9960.h
components/ldradar/: CMakeLists.txt  Kconfig
components/ldradar/include/: DebounceRadar.h  Events.h  LD1125.h  RadarSensor.h
components/ldradar/src/: DebounceRadar.cpp  RadarSensor.cpp
components/settings/include/: Settings.h
components/settings/src/: Settings.cpp
main/: CMakeLists.txt  LdrWebServer.cpp  LdrWebServer.h  MqttClient.cpp  MqttClient.h  MqttEventProc.h  SettingsManager.h  idf_component.yml  main.cpp
